--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1958,6 +1958,8 @@ app doing the data requests, not a malicious bot)
 
 -Throttling of limited APIs (to help avoid ip blacklisting by exchanges requiring a separate call for each coin)
 
+-Consolidated multiple function calls into variables where possible, for less moving parts / increased runtime speed
+
 -New Bitcoin fiat (or stablecoin) trading pairs: USDT / TUSD / USDC / GBP / EUR / CAD / AUD / SGD / HKD / GBP / EUR / CHF / JPY / RUB
 
 -Dynamically changeable primary fiat currency globally (charts / alerts / token value / subtotal / total / tools / calculators), 
