Added dynamic modularity to MISCASSETS, and 13 more assets
-Added dynamic modularity to MISCASSETS

-Added all 13 fiat pairings (to already-existing 4 crypto pairings) within MISCASSETS as pairing options (to see what the equivalent trade / holdings value in the paired currency would be)

--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1972,6 +1972,21 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 
 
+-------------------------------------------------------------------
+4.01.0:
+
+-Added dynamic modularity to MISCASSETS
+
+-Added all 13 fiat pairings (to already-existing 4 crypto pairings) within MISCASSETS as pairing options (to see what the equivalent trade / holdings value in the paired currency would be)
+
+-------------------------------------------------------------------
+
+
+
+
+
+
+
 
 
 
