Config checks for new default Bitcoin exchange/pairing config settings, hardware info revisions for debug mode
Config checks for new default Bitcoin exchange/pairing config settings, hardware info revisions for debug mode

--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1993,7 +1993,9 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 -------------------------------------------------------------------
 4.02.0:
 
--Hardware sensor(s) data added to debugging mode stats (model / temperature / etc)
+-Config checks for new default Bitcoin exchange/pairing config settings
+
+-Hardware sensor(s) data included in debugging mode stats (cpu / temperature / load / etc)
 
 IMPORTANT NOTE: v4.00.0 and higher of this app REQUIRES DELETING YOUR PREVIOUS CHART DATA FROM ANY EARLIER VERSIONS.
 MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWARDS-COMPATIBLE.
