--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -2009,13 +2009,13 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 
 -------------------------------------------------------------------
-4.03.0:
+4.02.1:
 
 -UX revisions
 
--Misc bug fixes
-
 -Code cleanup / optimization
+
+-Misc bug fixes in new logic
 
 -Additional configuration scanning / error logging
 
