--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -2049,15 +2049,17 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 -------------------------------------------------------------------
 4.04.0:
 
--Uptime stats in debug mode
+-Uptime stats
+
+-System memory stats
+
+-Better error logging
 
 -Code cleanup / optimization
 
--Better error logging for default Bitcoin market
+-Option to chart system data for devices (15 min load avg / temperature / free disk space / free memory [mb/percent], for available sensors)
 
--System memory stats for debugging / Rapberry Pi stats
-
--Chart system data for Raspberry Pi devices (15 min load avg / temperature / free disk space)
+-Configuration option to enable viewing system stats in the user interface (available to enable for ANY system, BUT ONLY ON BY DEFAULT !FOR RASPBERRY PI DEVICES!)
 
 IMPORTANT NOTE: v4.00.0 and higher of this app REQUIRES DELETING YOUR PREVIOUS CHART DATA FROM ANY EARLIER VERSIONS.
 MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWARDS-COMPATIBLE.
