UX (minor bug) revisions for system stats/charts
UX (minor bug) revisions for system stats/charts

--- a/misc-docs-etc/TODO.txt
+++ b/misc-docs-etc/TODO.txt
@@ -5,6 +5,12 @@ TODO
 ///////////////////////////////////////////////////////
 
 
+Standalone mode not changing corresponding exchange when pairing switched in IE (windows)
+
+
+No audio alert in FF (windows)
+
+
 Code review ALL functions.
 
 
