System charts UX
System charts UX

--- a/misc-docs-etc/TODO.txt
+++ b/misc-docs-etc/TODO.txt
@@ -76,6 +76,9 @@ MAYBE
 ///////////////////////////////////////////////////////
 
 
+Alerts if NOT admin ip address visiting (admin ip stored in config setting)?
+
+
 See if at all feasible to fully modularize mining calculators to be added via config settings?
 
 
