--- a/misc-docs-etc/TODO.txt
+++ b/misc-docs-etc/TODO.txt
@@ -17,7 +17,7 @@ No audio alert in FF (windows)
 Code review ALL functions.
 
 
-Add setting to enable access stats modal, maybe include an optional password setting to require login to view it in the UI if password is set. Store access data in flat file / json format (so mulitiple values can be read back into the app before updating, then updated values saved back in json overwriting previously saved values). Last 50 unique ip addresses, showing ip address's last user agent / last visit time / total visits count. Drop any over 50 ip addresses off the list based on oldest timestamps.
+Add setting to enable access stats modal, maybe include an optional password setting to require login to view it in the UI if password is set. Store access data in flat file / json format (so mulitiple values can be read back into the app before updating, then updated values saved back in json overwriting previously saved values). Last 50 unique ip addresses, showing ip address's last user agent / last visit time / total visits count. Drop any over 50 ip addresses off the list based on oldest timestamps. Store visitor ip address data (user agent, etc) in an array key based off ip address (json format).
 
 
 Use a password salt and php5.5 hashing password as described here, save salt to a flat file in the vars cache directory: https://www.php.net/manual/en/faq.passwords.php
