Htaccess password protection config settings (username / password required to view web interface)
Htaccess password protection config settings (username / password required to view web interface)

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -2335,6 +2335,8 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 -Code cleanup
 
+-Htaccess password protection config settings (username / password required to view web interface)
+
 IMPORTANT NOTES: 
 
 v4.06.0 and higher modularizes the configuration settings into the new $app_config array. ALL
